--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8081
+server.port=8090
 
 #spring.datasource.url = jdbc:mysql://localhost:3306/do_an_2020
 
@@ -25,3 +25,10 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 	
 spring.thymeleaf.cache=false
 
+spring.freemarker.template-loader-path: classpath:/templates
+spring.freemarker.suffix: .ftl
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=congdvse06058@fpt.edu.vn
+spring.mail.password=cong123456
