--- a/frontEnd/SportTournamentSupportSystem/package.json
+++ b/frontEnd/SportTournamentSupportSystem/package.json
@@ -14,6 +14,8 @@
     "@types/react-icons": "^3.0.0",
     "@types/react-modal": "^3.10.6",
     "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/react-select": "^3.0.14",
     "@types/react-sticky": "^6.0.3",
     "@types/react-tabs": "^2.3.1",
     "@types/react-virtualized": "^9.21.10",
@@ -26,9 +28,12 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-instantsearch-dom": "^6.6.0",
+    "react-loading-skeleton": "^2.1.1",
     "react-modal": "^3.11.2",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-select": "^3.1.0",
     "react-slideshow-image": "^2.0.1",
     "react-sticky": "^6.0.3",
     "react-tabs": "^3.1.1",
