--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8090
 spring.datasource.url = jdbc:mysql://localhost:3306/do_an_2020
 
 spring.datasource.username = root
-spring.datasource.password = admin
+spring.datasource.password = cong123456
 
 #spring.datasource.url = jdbc:mysql://sport-tournament-support-system.mysql.database.azure.com:3306/sport-tournaments-support-system?autoReconnect=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 #
