--- a/frontEnd/SportTournamentSupportSystem/package.json
+++ b/frontEnd/SportTournamentSupportSystem/package.json
@@ -21,9 +21,11 @@
     "@types/react-virtualized": "^9.21.10",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "date-fns": "^2.15.0",
     "formik": "^2.1.4",
     "react": "^16.13.1",
     "react-block-ui": "^1.3.3",
+    "react-cookie": "^4.0.3",
     "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
