--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,20 @@
 server.port=8090
-
-#spring.datasource.url = jdbc:mysql://localhost:3306/do_an_2020
 #
-#spring.datasource.username = root
-#spring.datasource.password = cong123456
+spring.datasource.url = jdbc:mysql://localhost:3306/do_an_2020
 
-spring.datasource.url = jdbc:mysql://sport-tournament-support-system.mysql.database.azure.com:3306/sport-tournaments-support-system?autoReconnect=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username = root
+spring.datasource.password = admin
 
-spring.datasource.username = cong261298@sport-tournament-support-system
-spring.datasource.password = Cong123456
+#spring.datasource.url = jdbc:mysql://sport-tournament-support-system.mysql.database.azure.com:3306/sport-tournaments-support-system?autoReconnect=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#
+#spring.datasource.username = cong261298@sport-tournament-support-system
+#spring.datasource.password = Cong123456
 
 spring.jpa.show-sql=true
 
-spring.jpa.hibernate.ddl-auto = none
+#spring.jpa.hibernate.ddl-auto = none
 #spring.jpa.hibernate.ddl-auto = create-drop
-#spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = create
 #spring.jpa.hibernate.ddl-auto = update
 
 spring.datasource.hikari.maxLifetime = 1800000
