--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,12 @@
 			<version>0.9.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.5</version> <!-- check latest version for GSON -->
+		</dependency>
+
 	</dependencies>
 
 	<build>
