--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.password = admin
 #spring.datasource.username = cong261298@sport-tournament-support-system
 #spring.datasource.password = Cong123456
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 spring.jpa.hibernate.ddl-auto = none
 #spring.jpa.hibernate.ddl-auto = create-drop
