--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 server.port=8090
 #
-spring.datasource.url = jdbc:mysql://localhost:3306/do_an_2020
-
-spring.datasource.username = root
-spring.datasource.password = cong123456
-
-#spring.datasource.url = jdbc:mysql://sport-tournament-support-system.mysql.database.azure.com:3306/sport-tournaments-support-system?autoReconnect=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.url = jdbc:mysql://localhost:3306/do_an_2020
 #
-#spring.datasource.username = cong261298@sport-tournament-support-system
-#spring.datasource.password = Cong123456
+#spring.datasource.username = root
+#spring.datasource.password = cong123456
+
+spring.datasource.url = jdbc:mysql://sport-tournament-support-system.mysql.database.azure.com:3306/sport-tournaments-support-system?autoReconnect=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+
+spring.datasource.username = cong261298@sport-tournament-support-system
+spring.datasource.password = Cong123456
 
 spring.jpa.show-sql=false
 
@@ -42,7 +42,3 @@ spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=200MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=215MB
-
-## File Storage Properties
-# Please change this to the path where you want the uploaded files to be stored.
-file.upload-dir=E:/uploadImage
