--- a/.github/workflows/develop_sporttournamentsupportsystemweb.yml
+++ b/.github/workflows/develop_sporttournamentsupportsystemweb.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy WAR app to Azure Web App - sporttournamentsupportsystemweb
+name: Build and deploy JAR app to Azure Web App - sporttournamentsupportsystemweb
 
 on:
   push:
@@ -28,5 +28,5 @@ jobs:
       with:
         app-name: 'sporttournamentsupportsystemweb'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_6ed3f7deb42848c69052554d257511da }}
-        package: '${{ github.workspace }}/target/*.war'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_3244d67c581f4703961a111889baa6be }}
+        package: '${{ github.workspace }}/target/*.jar'
