--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8090
 #
-spring.datasource.url = jdbc:mysql://localhost:3306/do_an_2020
+spring.datasource.url = jdbc:mysql://localhost:3306/do_an_2020_test
 
 spring.datasource.username = root
-spring.datasource.password = cong123456
+spring.datasource.password = admin
 
 #spring.datasource.url = jdbc:mysql://sport-tournament-support-system.mysql.database.azure.com:3306/sport-tournaments-support-system?autoReconnect=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 #
