--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,9 @@ spring.datasource.password = admin
 
 spring.jpa.show-sql=true
 
-#spring.jpa.hibernate.ddl-auto = none
+spring.jpa.hibernate.ddl-auto = none
 #spring.jpa.hibernate.ddl-auto = create-drop
-spring.jpa.hibernate.ddl-auto = create
+#spring.jpa.hibernate.ddl-auto = create
 #spring.jpa.hibernate.ddl-auto = update
 
 spring.datasource.hikari.maxLifetime = 1800000
