--- a/frontEnd/SportTournamentSupportSystem/package.json
+++ b/frontEnd/SportTournamentSupportSystem/package.json
@@ -27,6 +27,7 @@
     "react-cookie": "^4.0.3",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
+    "react-favicon": "^0.0.18",
     "react-icons": "^3.10.0",
     "react-instantsearch-dom": "^6.6.0",
     "react-loading-skeleton": "^2.1.1",
