--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,12 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.5</version> <!-- check latest version for GSON -->
 		</dependency>
+		
+		<dependency>
+			<groupId>com.microsoft.azure</groupId>
+			<artifactId>azure-storage</artifactId>
+			<version>8.4.0</version>
+		</dependency>
 
 	</dependencies>
 
