--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,18 @@
 server.port=8090
 #
-spring.datasource.url = jdbc:mysql://localhost:3306/ssts
-
-spring.datasource.username = root
-spring.datasource.password = admin
+#spring.datasource.url = jdbc:mysql://localhost:3306/ssts
+#
+#spring.datasource.username = root
+#spring.datasource.password = admin
 
 #spring.datasource.url = jdbc:mysql://sport-tournament-support-system.mysql.database.azure.com:3306/sport-tournaments-support-system?autoReconnect=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 #
 #spring.datasource.username = cong261298@sport-tournament-support-system
 #spring.datasource.password = Cong123456
 
-#spring.datasource.url = jdbc:mysql://b175ea5a32255d:ded074bc@us-cdbr-east-02.cleardb.com/heroku_f0dbd3d096885f6?reconnect=true&useUnicode=true&characterEncoding=UTF-8
-#spring.datasource.username = b175ea5a32255d
-#spring.datasource.password = ded074bc
+spring.datasource.url = jdbc:mysql://b175ea5a32255d:ded074bc@us-cdbr-east-02.cleardb.com/heroku_f0dbd3d096885f6?reconnect=true&useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username = b175ea5a32255d
+spring.datasource.password = ded074bc
 
 spring.jpa.show-sql=false
 
@@ -34,8 +34,8 @@ spring.freemarker.suffix: .ftl
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=congdvse06058@fpt.edu.vn
-spring.mail.password=cong123456
+spring.mail.username=sporttournamentsystem@gmail.com
+spring.mail.password=cong261298
 
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
