[cong] fix addTotalTeam va totalTable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ server.port=8090
 #spring.datasource.username = root
 #spring.datasource.password = cong123456
 
-spring.datasource.url = jdbc:mysql://sport-tournament-support-system.mysql.database.azure.com:3306/sport-tournaments-support-system?autoReconnect=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://sport-tournaments-support-system.mysql.database.azure.com:3306/sport-tournaments-support-system?autoReconnect=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 
-spring.datasource.username = cong261298@sport-tournament-support-system
+spring.datasource.username = nhanptse05568@sport-tournaments-support-system
 spring.datasource.password = Cong123456
 
 #spring.datasource.url = jdbc:mysql://b175ea5a32255d:ded074bc@us-cdbr-east-02.cleardb.com/heroku_f0dbd3d096885f6?reconnect=true&useUnicode=true&characterEncoding=UTF-8
